Second_Step/data/46/7/grade_comments.txt
-The compilation or preparation of execution has failed
Tools.java:29: error: cannot find symbol
    	Arrays.sort(tab);
    	^
  symbol:   variable Arrays
  location: class Tools
1 error
Not compiled
